fix(java:S6204): replace Collectors.toList() with Stream.toList() in VoucherDAODemo
Updated getAllVoucherAttivi() method. Removed unused Collectors import.